# proyecto-ios

./: .gitignore  README.md  migration.sql
0243179_projecto/0243179_projecto/: ContentView.swift  _243179_projectoApp.swift  login.swift
0243179_projecto/0243179_projecto.xcodeproj/: project.pbxproj
0243179_projecto/0243179_projecto/Assets.xcassets/blue_med.colorset/: Contents.json
0243179_projecto/0243179_projectoTests/: _243179_projectoTests.swift
0243179_projecto/0243179_projectoUITests/: _243179_projectoUITests.swift  _243179_projectoUITestsLaunchTests.swift
app/app/: CardView.swift  ContentView.swift  CreateCollection.swift  CreateGroupView.swift  GroupDetailsView.swift  HomeView.swift  LibraryView.swift  LoginView.swift  SearchView.swift  SignupView.swift  SurrealDB.swift  UserView.swift  WelcomeView.swift  appApp.swift  dataStructures.swift  home.lottie  questions.swift
app/app.xcodeproj/: project.pbxproj
app/app/Assets.xcassets/338-662-car-interface.dataset/: Contents.json
app/app/Assets.xcassets/blue_log_in.colorset/: Contents.json
app/app/Assets.xcassets/blue_med.colorset/: Contents.json
app/app/Assets.xcassets/blue_principal.colorset/: Contents.json
app/app/DB/: CreateCard.swift  DataStructs.swift  SurrealDB.swift
backend/: Cargo.toml
backend/src/: main.rs
migrations/: card.sql  collection.rs  collection.sql  create_db.hurl  create_db.rs  follow.sql  owns.sql  scope.rs  scope.sql  search.sql  stack.sql  sus.sql  tag.sql  tagged.sql  user.rs  user.sql  view.sql
(+9 files in other folders)
