

[package]
edition = "2021"
name = "backend"
version = "1.0.0"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.17", features = ["macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.28.0", features = ["full"] }
