

[package]
edition = "2021"
name = "backend"
version = "1.0.0"

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.17", features = ["macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
